<resources>
    <string name="app_name">MovieRecco</string>

    <string name="movie_text">Movie</string>
    <string name="tv_series_text">TV-Series</string>
    <string name="select_genre">Select Genre</string>
    <string name="movie_or_tv_series">Movie or TV-Series</string>


    <string-array name="type">

        <item>Movie</item>
        <item>TV-Series</item>

    </string-array>

    <string-array name="year">

        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>

    </string-array>

    <string name="description_query">No need to go anywhere. Just put in your preferences and we will help you find your flix</string>
    <string name="proceed_text">Proceed</string>
    <string name="movie_list_text">Movie List</string>
    <string name="search_hint">Search</string>

</resources>
