<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gray.black"
    tools:context="com.project.movierecco.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/description_query"
            android:textColor="@color/lightning_yellow"
            android:textSize="20dp"/>


        <LinearLayout
            android:id="@+id/type_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:background="@color/find_movie_dark_green"
            android:weightSum="3"
            android:padding="20dp">

            <TextView
                android:id="@+id/type_hint_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/movie_text"
                android:textColor="@color/gray.black"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Or"
                android:gravity="center"
                android:textColor="@color/gray.black"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/type_hint_tv_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_series_text"
                android:textColor="@color/gray.black"
                android:textSize="15dp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/genre_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_ll"
            android:background="@color/find_movie_dark_green"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/genre_hint_and_value_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_genre"
                android:textColor="@color/gray.black"
                android:textSize="15dp"/>


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/moviecollage"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/location_button"
            android:background="@color/blue"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textSize="14dp"
            android:text="Location"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/service_method_button"
            android:background="@color/blue"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textSize="14dp"
            android:text="Service Call"
            android:textAllCaps="false"/>


    </LinearLayout>

</ScrollView>
